# telephony_cellular_data

./: BUILD.gn  README.en.md  README.md  README_zh.md  bundle.json  ohos.build
frameworks/ets/ani/: BUILD.gn
frameworks/ets/ani/ets/: @ohos.telephony.data.ets
frameworks/ets/ani/src/: bridge.rs  lib.rs
frameworks/js/: BUILD.gn
frameworks/js/napi/src/: napi_cellular_data.cpp
frameworks/native/: cellular_data_client.cpp  cellular_data_service_proxy.cpp
interfaces/innerkits/: cellular_data_client.h
interfaces/kits/js/declaration/: @ohos.telephony.data.d.ts
sa_profile/: 4007.json  4007.xml  4007_dynamic.json
services/include/: cellular_data_controller.h  cellular_data_handler.h  cellular_data_rdb_observer.h  cellular_data_service.h  cellular_data_service_stub.h  cellular_data_setting_observer.h  data_connection_manager.h  data_connection_monitor.h  data_connection_params.h  data_switch_settings.h  sim_switcher.h  state_notification.h
services/include/apn_manager/: apn_holder.h  apn_item.h  apn_manager.h  connection_retry_policy.h
services/include/common/: cellular_data_constant.h  cellular_data_event_code.h
services/include/state_machine/: activating.h  active.h  cellular_data_state_machine.h  disconnecting.h  inactive.h  state_machine.h
services/include/utils/: cellular_data_hisysevent.h  cellular_data_net_agent.h  cellular_data_rdb_helper.h  cellular_data_utils.h  network_search_utils.h  ril_adapter_utils.h  sim_utils.h
services/src/: cellular_data_controller.cpp  cellular_data_handler.cpp  cellular_data_rdb_observer.cpp  cellular_data_roaming_observer.cpp  cellular_data_service.cpp  cellular_data_service_stub.cpp  cellular_data_setting_observer.cpp  data_connection_manager.cpp  data_connection_monitor.cpp  data_switch_settings.cpp  sim_switcher.cpp  state_notification.cpp  traffic_management.cpp
services/src/apn_manager/: apn_holder.cpp  apn_item.cpp  apn_manager.cpp  connection_retry_policy.cpp
services/src/state_machine/: activating.cpp  active.cpp  cellular_data_state_machine.cpp  default.cpp  disconnecting.cpp  inactive.cpp
services/src/utils/: cellular_data_dump_helper.cpp  cellular_data_hisysevent.cpp  cellular_data_net_agent.cpp  cellular_data_rdb_helper.cpp  cellular_data_settings_rdb_helper.cpp  cellular_data_utils.cpp  network_search_utils.cpp  ril_adapter_utils.cpp  sim_utils.cpp
test/: BUILD.gn  apn_manager_test.cpp  cellualr_data_branch_test.cpp  cellular_data_client_test.cpp  cellular_data_dump_helper_test.cpp  cellular_data_handler_branch_test.cpp  cellular_data_handler_test.cpp  cellular_data_rdb_helper_test.cpp  cellular_data_service_test.cpp  cellular_data_test.cpp  cellular_state_machine_test.cpp  data_switch_settings_test.cpp  traffic_management_test.cpp  zero_branch_test.cpp
test/fuzztest/common_fuzzer/: statemachine_fuzzer.cpp
test/fuzztest/getcellulardatastate_fuzzer/: BUILD.gn
test/fuzztest/updateactivemachine_fuzzer/: BUILD.gn
test/fuzztest/updatecellulardata_fuzzer/: BUILD.gn
test/fuzztest/updatedisconnectmachine_fuzzer/: BUILD.gn
test/fuzztest/updateinactivemachine_fuzzer/: BUILD.gn
test/fuzztest/updateincalldatamachine_fuzzer/: BUILD.gn
test/mock/: mock_core_service.h  mock_data_share_result_set.h  mock_net_conn_service.h  mock_network_search.h  mock_sim_manager.h
test/unit_test/: BUILD.gn  cellular_data_code_test.cpp
